@@ -106,6 +106,8 @@ extern void log_err A_((int,char *,char *));
 extern void log_event A_((int,int,char *,char *));
 extern int  log_open A_((char *,char *));
 extern void log_record A_((int,int,char *,char *));
+extern void log_roll A_((int));
+extern long log_size A_((void));
 extern char log_buffer[LOG_BUF_SIZE];
 
 extern int  chk_file_sec A_((char *,int,int,int,int));
