@@ -136,3 +136,5 @@ ATTR_submithosts,
 ATTR_allownodesubmit,
 ATTR_servername,
 ATTR_autonodenp,
+ATTR_logfilemaxsize,
+ATTR_logfilerolldepth,
