@@ -140,6 +140,8 @@ enum srv_atr {
 	SRV_ATR_SubmitHosts,
 	SRV_ATR_AllowNodeSubmit,
 	SRV_ATR_AutoNodeNP,
+	SRV_ATR_LogFileMaxSize,
+	SRV_ATR_LogFileRollDepth,
 #include "site_svr_attr_enum.h"
 	SRV_ATR_ServerName,
 	/* This must be last */
